--- a/work.html
+++ b/work.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Bonjour les amis</title>
+</head>
+<body>
+
+    <div class="container">
+        <p id="message">Bonjour les amis</p>
+    </div>
+
+</body>
+</html>
 
