--- a/work.html
+++ b/work.html
@@ -7,10 +7,12 @@
     <title>Bonjour les amis</title>
 </head>
 <body>
-
+<center>
     <div class="container">
         <p id="message">Bonjour les amis</p>
     </div>
+</center>
+    
 
 </body>
 </html>
